fixing dark mode on dark mode prefered

--- a/src/App.css
+++ b/src/App.css
@@ -1,168 +1,204 @@
 @import url('https://fonts.googleapis.com/css2?family=Ranga:wght@700&display=swap');
 
 :root {
-  --bodyBgColor:white
+    --bodyBgColor: white;
 }
 
-*, *::before, *::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 html {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
 }
 
 body {
-  background-color: var(--bodyBgColor);
+    background-color: var(--bodyBgColor);
 }
 
 #themeButton {
-  position: absolute;
-  right: 2%;
-  top: 15%;
-  height: 5vh;
-  display: flex;
-  align-items: center;
-  background-color: black;
-  color: white;
-  padding: 0.5rem;
-
+    position: absolute;
+    right: 2%;
+    top: 15%;
+    height: 5vh;
+    display: flex;
+    align-items: center;
+    background-color: black;
+    color: white;
+    padding: 0.5rem;
 }
 
 #themeButton:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
 
-#themeButtonIconLight, #themeButtonIconDark {
-  margin: 0.5rem;
-  height: 4vh;
-  width: 4vh;
+#themeButtonIconLight,
+#themeButtonIconDark {
+    margin: 0.5rem;
+    height: 4vh;
+    width: 4vh;
 }
 
 #themeButton.toggle {
-  background-color: #fff;
-  color: black;
+    background-color: #fff;
+    color: black;
 }
 
 #jumpBackToTop {
-  position: fixed;
-  right: 0.5%;
-  bottom: 5%;
-  text-decoration: none;
-  color: white;
-  margin: 0;
-  padding: 0.3rem;
-  font-size: 1.5rem;
-  background-color: black;
-  border-radius: 50%;
+    position: fixed;
+    right: 0.5%;
+    bottom: 5%;
+    text-decoration: none;
+    color: white;
+    margin: 0;
+    padding: 0.3rem;
+    font-size: 1.5rem;
+    background-color: black;
+    border-radius: 50%;
 }
 
 header {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 h1 {
-  font-size: 3rem;
-  font-family: 'Ranga', cursive;
-  background: -webkit-linear-gradient( #0066FF 15%,#FF0000 65%, #ff793b 85%,#6aff9b 88%, #0066FF 100%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; 
-  width: 100%;
-  text-align: center;
-  background-size: 200% 200%;
-  -webkit-animation: Animation 3s linear infinite ;
-  -moz-animation: Animation 3s linear infinite ;
-  animation: Animation 3s linear infinite ;
+    font-size: 3rem;
+    font-family: 'Ranga', cursive;
+    background: -webkit-linear-gradient(
+        #0066ff 15%,
+        #ff0000 65%,
+        #ff793b 85%,
+        #6aff9b 88%,
+        #0066ff 100%
+    );
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    width: 100%;
+    text-align: center;
+    background-size: 200% 200%;
+    -webkit-animation: Animation 3s linear infinite;
+    -moz-animation: Animation 3s linear infinite;
+    animation: Animation 3s linear infinite;
 }
 
-@media screen and (min-width: 400px){
-  h1{
-    font-size: 5rem;
-  }
+@media screen and (min-width: 400px) {
+    h1 {
+        font-size: 5rem;
+    }
 }
-@media screen and (min-width: 800px){
-  h1{
-    font-size: 10rem;
-  }
+@media screen and (min-width: 800px) {
+    h1 {
+        font-size: 10rem;
+    }
 }
 
 @-webkit-keyframes Animation {
-  0%{background-position:10% -100%}
-  100%{background-position:10% 100%}
+    0% {
+        background-position: 10% -100%;
+    }
+    100% {
+        background-position: 10% 100%;
+    }
 }
 @-moz-keyframes Animation {
-  0%{background-position:10% -100%}
-  100%{background-position:10% 100%}
+    0% {
+        background-position: 10% -100%;
+    }
+    100% {
+        background-position: 10% 100%;
+    }
 }
-@keyframes Animation { 
-  0%{background-position:10% -100%}
-  100%{background-position:10% 100%}
+@keyframes Animation {
+    0% {
+        background-position: 10% -100%;
+    }
+    100% {
+        background-position: 10% 100%;
+    }
 }
-
 
 h2 {
-  font-size: 5rem;
-  font-family: 'Ranga', cursive;
-  color: red;
-  width: 100%;
-  text-align: center;
+    font-size: 5rem;
+    font-family: 'Ranga', cursive;
+    color: red;
+    width: 100%;
+    text-align: center;
 }
 
 ul {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  width: 96%;
-  list-style-type: none;
-  gap: 2rem;
-  margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 96%;
+    list-style-type: none;
+    gap: 2rem;
+    margin: 0 auto;
 }
 
 li {
-  min-height: 100px;
-  min-width: 25vw;
+    min-height: 100px;
+    min-width: 25vw;
 }
 
 footer {
-  width: 100%;
-  margin: 2rem auto;
-  text-align: center;
+    width: 100%;
+    margin: 2rem auto;
+    text-align: center;
 }
 
-footer a, #githubLink {
-  font-family: 'Ranga', cursive;
-  color: red;
-  font-size: 1.5rem;
-  letter-spacing: 0.1rem;
+footer a,
+#githubLink {
+    font-family: 'Ranga', cursive;
+    color: red;
+    font-size: 1.5rem;
+    letter-spacing: 0.1rem;
 }
 
 @media (prefers-color-scheme: dark) {
-  body {
-    background-color:  black;
-  }
+    :root {
+        --bodyBgColor: black;
+    }
+
+    body {
+        background-color: var(--bodyBgColor);
+    }
+
+    #themeButton {
+        background-color: white;
+        color: black;
+    }
+
+    #themeButton.toggle {
+        background-color: #000;
+        color: white;
+    }
 }
 
 @media screen and (prefers-reduced-motion: reduce) {
-  h1 {
-  font-size: 10rem;
-  font-family: 'Ranga', cursive;
-  background: -webkit-linear-gradient(#FF0000 35%, #ff793b 55%,#6aff9b 68%, #0066FF 80%);
-  background-size: 100%;
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; 
-  width: 100%;
-  text-align: center;
-  }
+    h1 {
+        font-size: 10rem;
+        font-family: 'Ranga', cursive;
+        background: -webkit-linear-gradient(
+            #ff0000 35%,
+            #ff793b 55%,
+            #6aff9b 68%,
+            #0066ff 80%
+        );
+        background-size: 100%;
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        width: 100%;
+        text-align: center;
+    }
 }
-
-
-
